# DroneWorkspace

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile
Commands/: Opret klasser og funktioner  ros commands.txt
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: ardronepkg.pc  ardronepkgConfig.cmake
catkin_generated/stamps/ardronepkg/: package.xml.stamp
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/share/ardronepkg/cmake/: ardronepkgConfig.cmake
gtest/: CTestTestfile.cmake  Makefile
launch/: fly_start.launch  fly_start.launch~
src/: DroneMovement.cpp  DroneMovement.h  FindCirclesWebcam.cpp  FindCirclesWebcam.cpp.orig  FindElipses.cpp  Image_converter.cpp  Main.cpp  QRCode.cpp  droneMovement.cpp  featureDetection.cpp  featureDetection.h  flytest.cpp  main.cpp  qrScan.cpp  qrScan.h  qrtest.cpp  testclass.cpp
